# anonymous

./: README.md  pyproject.toml
src/football_manager/: __init__.py  cli.py  engine.py  models.py
